--- a/iqueaWeb/mystyle.css
+++ b/iqueaWeb/mystyle.css
@@ -3,7 +3,6 @@
 }
 
 .footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -34,5 +33,9 @@
     width: 100%;
     background-color: #0051BA;
     color: white;
+    text-align: center;
+}
+
+.centrar {
     text-align: center;
 }
