--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -13,7 +13,7 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <asp:ImageButton ID="ImageButton1" runat="server" Height="75px" ImageUrl="https://1000marcas.net/wp-content/uploads/2019/12/IKEA-Logo-600x338.png" PostBackUrl="~/Site1.aspx" Width="113px" />
+            <asp:ImageButton ID="ImageButton1" runat="server" Height="75px" ImageUrl="../logo_iquea.jpg" PostBackUrl="~/Site1.aspx" Width="113px" />
 &nbsp;<div class ="toolbar">
                  
         <input type="image" src="https://image.flaticon.com/icons/png/128/694/694985.png" style="height: 25px; width: 30px" />
