--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -13,14 +13,14 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <asp:ImageButton ID="ImageButton1" runat="server" Height="75px" ImageUrl="../logo_iquea.jpg" PostBackUrl="~/Site1.aspx" Width="113px" />
+            <asp:ImageButton ID="ImageButton1" runat="server" Height="75px" ImageUrl="https://i.ibb.co/2S5ZYqC/logo-iquea.jpg" PostBackUrl="~/HomePage.aspx" Width="113px" />
             <div class ="toolbar">
                  
-                <input type="image" src="https://image.flaticon.com/icons/png/128/694/694985.png" style="height: 25px; width: 30px" />
+                <asp:ImageButton ID="ImageButton2" runat="server" src="https://image.flaticon.com/icons/png/128/694/694985.png" style="height: 25px; width: 30px" />
                 <asp:TextBox ID="TextBox1" runat="server" style="margin-top: 0px" Width="584px"></asp:TextBox>
                 <asp:ImageButton ID="ImageButton3" runat="server" Height="18px" ImageUrl="https://image.flaticon.com/icons/png/512/107/107831.png" PostBackUrl="~/Carrito.aspx" Width="32px" />
-&nbsp;<asp:ImageButton ID="ImageButton2" runat="server" Height="22px" ImageUrl="https://c0.klipartz.com/pngpicture/613/636/gratis-png-iconos-de-la-computadora-perfil-de-usuario-avatar-masculino-avatar.png" PostBackUrl="~/Usuario.aspx" Width="38px" />
-&nbsp;<input type="image" src="https://cdn.pixabay.com/photo/2017/06/26/20/33/icon-2445095_960_720.png" style="height: 36px; width: 36px" />
+&nbsp;<asp:ImageButton ID="ImageButton4" runat="server" Height="22px" ImageUrl="https://c0.klipartz.com/pngpicture/613/636/gratis-png-iconos-de-la-computadora-perfil-de-usuario-avatar-masculino-avatar.png" PostBackUrl="~/Usuario.aspx" Width="38px" />
+&nbsp;<asp:ImageButton ID="ImageButton5" runat="server" src="https://cdn.pixabay.com/photo/2017/06/26/20/33/icon-2445095_960_720.png" style="height: 36px; Width: 36px" PostBackUrl="~/Lista_deseos.aspx"/>
             </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
