Implementacion de las paginas aspx para cada tipo de salon, de varios articulos, ademas de la cracion de una pagina aspx Ordena para cada pagina que necesite ser ordenada

--- a/iqueaWeb/mystyle.css
+++ b/iqueaWeb/mystyle.css
@@ -39,6 +39,25 @@
 
 
 
+.final {
+    width: 500px;
+    float: left;
+}
+
+.final2 {
+    width: 500px;
+    float: left;
+}
+
+.oferta {
+}
+
+.arreglo {
+    float: none;
+}
+
+
+
 .menuInicio {
     background-color: #0051BA;
 }
@@ -59,9 +78,9 @@
     text-decoration:none;
 }
 
-    .menuInicio ul li a:hover {
-        background-color: #70b8c0;
-    }
+.menuInicio ul li a:hover {
+    background-color: #70b8c0;
+}
 
 .submenu {
     background-color: #798182;
