--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -23,18 +23,29 @@
 &nbsp;<asp:ImageButton ID="ImageButton5" runat="server" src="https://cdn.pixabay.com/photo/2017/06/26/20/33/icon-2445095_960_720.png" style="height: 36px; Width: 36px" PostBackUrl="~/Lista_deseos.aspx"/>
             </div>
 
+            <asp:Menu ID="Menu1" runat="server" BackColor="#0051BA" CssClass="MenuInicio2" Font-Names="Tw Cen MT Condensed Extra Bold" Font-Size="XX-Large" Font-Strikeout="False" ForeColor="White" Height="59px" Orientation="Horizontal" OnMenuItemClick="Menu1_MenuItemClick">
+                <DynamicHoverStyle BackColor="#70B8C0" ForeColor="White" />
+                <DynamicMenuItemStyle HorizontalPadding="100px" VerticalPadding="6px" CssClass="SubMenu2" />
+                <DynamicMenuStyle BackColor="#798182" />
+                <DynamicSelectedStyle BackColor="#507CD1" />
+                <Items>
+                    <asp:MenuItem Text="Home" Value="Home" NavigateUrl="~/Index.aspx"></asp:MenuItem>
+                    <asp:MenuItem Selectable="False" Text="Categorias" Value="Categorias">
+                        <asp:MenuItem Text="Interior" Value="Interior" NavigateUrl="~/Interior.aspx"></asp:MenuItem>
+                        <asp:MenuItem Text="Exterior" Value="Exterior" NavigateUrl="~/Exterior.aspx"></asp:MenuItem>
+                    </asp:MenuItem>
+                    <asp:MenuItem Selectable="False" Text="Temporada" Value="Temporada">
+                        <asp:MenuItem Text="Sencillo" Value="Sencillo" NavigateUrl="~/Sencillo.aspx"></asp:MenuItem>
+                        <asp:MenuItem Text="Clasico" Value="Clasico" NavigateUrl="~/Clasico.aspx"></asp:MenuItem>
+                        <asp:MenuItem Text="Moderno" Value="Moderno" NavigateUrl="~/Moderno.aspx"></asp:MenuItem>
+                    </asp:MenuItem>
+                </Items>
+                <StaticHoverStyle BackColor="#0099CC" ForeColor="White" />
+                <StaticMenuItemStyle HorizontalPadding="160px" VerticalPadding="11px" />
+                <StaticSelectedStyle BackColor="#507CD1" />
+            </asp:Menu>
+
            <br />
-            <div class="menuInicio">
-                <ul>
-                    <li class="elemento1"> <a href="/Index.aspx">Home </a></li>
-                    <li class="elemento2"> <a >Categorias </a>
-                        <ul class="submenu">
-                            <li class="interior"><a href="/Interior.aspx">Interiores</a></li>
-                            <li class="exterior"><a href="/Exterior.aspx">Exteriores</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
     
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
