--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -51,7 +51,7 @@
             </asp:ContentPlaceHolder>
             <footer class ="footer"> 
               <p>Author: Iquea & Company</p>
-              <p><a href="mailto:hege@example.com" class ="enlace">iquea@example.com</a></p>
+              <p><a href="mailto:Iqueacompany@gmail.com" class ="enlace">Iqueacompany@gmail.com</a></p>
             </footer>
             
         </div>
