--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -27,17 +27,16 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        
+                          <asp:button Text="Home" ID="ButtonHome" runat="server" Height="40px" PostBackUrl="~/Index.aspx" Width="150px"  BackColor="transparent" BorderWidth="0px" />
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                      </li>
+                      
                                     <div class="navbar">
                                         <div class="navbar-inner">
                                             <div class="container">
                                                 <ul class="nav">
-                                                    <li class="dropdown" id="accountmenu">
-                                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorias<b class="caret"></b></a>
+                                                    <li class="dropdown" id="categorias">
+                                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorias<b class="caret"  ></b></a>
 
                                                         <ul class="dropdown-menu">
                                                             <li>
@@ -56,10 +55,35 @@
                                             </div>
                                         </div>
                                     </div>
+                                 <div class="navbar">
+                                        <div class="navbar-inner">
+                                            <div class="container">
+                                                <ul class="nav">
+                                                    <li class="dropdown" id="temporada">
+                                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Temporada<b class="caret"  ></b></a>
 
-                      <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                      </li>
+                                                        <ul class="dropdown-menu">
+                                                            <li>
+                                                            <asp:button Text="Sencillo" ID="ButtonSencillo" runat="server" Height="40px" PostBackUrl="~/Sencillo.aspx" Width="150px"  />
+                                                                </li>
+                                                            <li>
+                                                            <asp:button Text="Clasico" ID="ButtonClasico" runat="server" Height="40px" PostBackUrl="~/Clasico.aspx" Width="150px"  />
+                                                                </li>
+                                                            <li>
+                                                            <asp:button Text="Moderno" ID="ButtonModerno" runat="server" Height="40px" PostBackUrl="~/Moderno.aspx" Width="150px"  />
+                                                                </li>
+                                                            
+                                                            
+                                                            
+                                                            
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                      
                     </ul>
                     <div class="form-inline my-2 my-lg-0">
                       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -71,7 +95,8 @@
                         <asp:ImageButton ID="ImageButton3" runat="server" Height="18px" ImageUrl="https://image.flaticon.com/icons/png/512/107/107831.png" PostBackUrl="~/Carrito.aspx" Width="25px" />
                         &nbsp;
                         <asp:ImageButton ID="ImageButton4" runat="server" Height="22px" ImageUrl="https://c0.klipartz.com/pngpicture/613/636/gratis-png-iconos-de-la-computadora-perfil-de-usuario-avatar-masculino-avatar.png" PostBackUrl="~/Login.aspx" Width="38px" />
-                        <button type="submit" class="btn btn-primary btn-lg ">Login</button>
+                         <asp:Button Text="Login" type="submit" class="btn btn-primary btn-lg " ID="ButtonLogin" runat="server" Height="50px"   PostBackUrl="~/Login.aspx" Width="80px" />
+                        
 
                     </div>
                       
@@ -84,9 +109,15 @@
     
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
-            <footer class ="footer"> 
-              <p>Author: Iquea & Company</p>
-              <p><a href="mailto:Iqueacompany@gmail.com" class ="enlace">Iqueacompany@gmail.com</a></p>
+            
+
+            <footer class=" text-center footer text-lg-start">
+              <!-- Copyright -->
+              <div class="text-center p-3" >
+               Iquea & Company © 2021 Copyright:
+                <a class="enlace" href="mailto:Iqueacompany@gmail.com">Iqueacompany@gmail.com</a>
+              </div>
+              <!-- Copyright -->
             </footer>
             
         </div>
