--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -7,7 +7,7 @@
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="mystyle.css">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="Content/bootstrap.css" rel="stylesheet">
     <script src="Scripts/jquery-3.0.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
