--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -64,7 +64,7 @@
                  &nbsp;<div class="form-inline my-2 my-lg-0">
                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                       <div id="search">         
-                        <asp:TextBox ID="txtSearchMaster" runat="server"></asp:TextBox>
+                        <asp:TextBox ID="txtSearchMaster" runat="server" OnTextChanged="txtSearchMaster_TextChanged"></asp:TextBox>
                         <asp:Button ID="btnSearch" runat="server" Text="Search" OnClick="btnSearch_Click" />
                         </div>
                         <asp:ImageButton ID="ImageButton5" runat="server" src="https://cdn.pixabay.com/photo/2017/06/26/20/33/icon-2445095_960_720.png" style="height: 36px; Width: 36px" PostBackUrl="~/Lista_deseos.aspx"/>
