--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -66,6 +66,10 @@
                       <div id="search">         
                         <asp:TextBox ID="txtSearchMaster" runat="server" OnTextChanged="txtSearchMaster_TextChanged"></asp:TextBox>
                         <asp:Button ID="btnSearch" runat="server" Text="Search" OnClick="btnSearch_Click" />
+                        <select id="OptionBusqueda" runat="server">
+                            <option value="OptionNombre">Nombre</option>
+                            <option value="OptionPrecio">Precio</option>
+                        </select>
                         </div>
                         <asp:ImageButton ID="ImageButton5" runat="server" src="https://cdn.pixabay.com/photo/2017/06/26/20/33/icon-2445095_960_720.png" style="height: 36px; Width: 36px" PostBackUrl="~/Lista_deseos.aspx"/>
                         <asp:ImageButton ID="ImageButton3" runat="server" Height="18px" ImageUrl="https://image.flaticon.com/icons/png/512/107/107831.png" PostBackUrl="~/Carrito.aspx" Width="25px" />
