Anuncio en pagina inicial

--- a/iqueaWeb/Content/bootstrap.css
+++ b/iqueaWeb/Content/bootstrap.css
@@ -4867,13 +4867,14 @@ input[type="button"].btn-block {
 .card-img-bottom {
   -ms-flex-negative: 0;
   flex-shrink: 0;
-  width: 100%;
+  width: 42%;
 }
 
 .card-img,
 .card-img-top {
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
+    height: 453px;
 }
 
 .card-img,
