--- a/iqueaWeb/mystyle.css
+++ b/iqueaWeb/mystyle.css
@@ -53,6 +53,14 @@
 .arreglo {
     float: none;
 }
+.MyImage {
+    height: 20px;
+}
+
+input {
+    altura: 30px;
+    color de fondo: verde
+}
 
 
 
