--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -18,19 +18,21 @@
 <body style =" background-color: lightblue;">
     <form id="form1" runat="server">
         <div>
-            <asp:ImageButton ID="ImageButton1" runat="server" Height="75px" ImageUrl="https://i.ibb.co/2S5ZYqC/logo-iquea.jpg" PostBackUrl="~/Index.aspx" Width="113px" />
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <asp:ImageButton ID="ImageButton1" runat="server" ImageUrl="https://i.ibb.co/2S5ZYqC/logo-iquea.jpg" PostBackUrl="~/Index.aspx" style="width: 4%;
+    height: auto;" />
 
 
 
             <!-- MENU -->
            
              
-             <nav class="navbar navbar-expand-lg navbar-light bg-light">
+             
                   
                   
 
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <asp:Menu ID="Menu1" runat="server"  Orientation="Horizontal" OnMenuItemClick="Menu1_MenuItemClick">
+            <asp:Menu ID="Menu1" style="padding-left:40px;" runat="server"  Orientation="Horizontal" OnMenuItemClick="Menu1_MenuItemClick">
                 <DynamicHoverStyle BackColor="#70B8C0" ForeColor="White" />
                 <DynamicMenuItemStyle HorizontalPadding="100px" VerticalPadding="6px" CssClass="SubMenu2" />
                 <DynamicMenuStyle BackColor="#798182" />
