Añadido required field validator de registrarse

--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -1,5 +1,7 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="iqueaWeb.Site1" %>
 
+
+<%@ Register Assembly="AjaxControlToolkit" Namespace="AjaxControlToolkit" TagPrefix="ajaxToolkit" %>
 <!DOCTYPE html>
 
 <html>
