--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -77,7 +77,8 @@
                         <asp:ImageButton ID="ImageButton3" runat="server" Height="18px" ImageUrl="https://image.flaticon.com/icons/png/512/107/107831.png" PostBackUrl="~/Carrito.aspx" Width="25px" />
                         &nbsp;
                         <asp:ImageButton ID="ImageButton4" runat="server" Height="22px" ImageUrl="https://c0.klipartz.com/pngpicture/613/636/gratis-png-iconos-de-la-computadora-perfil-de-usuario-avatar-masculino-avatar.png" PostBackUrl="~/Login.aspx" Width="38px" />
-                         <asp:Button Text="Login" type="submit" class="btn btn-primary btn-lg " ID="ButtonLogin" runat="server" Height="50px"   PostBackUrl="~/Login.aspx" Width="80px" />
+                         <asp:Button Text="Login" type="submit" class="btn btn-primary btn-lg " ID="ButtonLogin" runat="server" Height="50px"   PostBackUrl="~/Login.aspx" Width="80px" OnClick="ButtonLogin_Click" />
+                     <asp:Button Text="Cerrar Sesion" type="submit" class="btn btn-primary btn-lg " ID="Button1" runat="server" Height="50px"   PostBackUrl="~/Login.aspx" Width="134px" OnClick="ButtonCerrar_Click" />
                         
 
                     </div>
