Redes sociales implementadas

--- a/iqueaWeb/Site1.Master
+++ b/iqueaWeb/Site1.Master
@@ -100,6 +100,8 @@
                 <div class="text-center p-3">
                     Iquea & Company © 2021 Copyright:
                 <a class="enlace" href="mailto:Iqueacompany@gmail.com">Iqueacompany@gmail.com</a>
+                    <a class="enlace" href="https://instagram.com/iqueacomp" target="_blank">Instagram</a>
+                    <a class="enlace" href="https://twitter/iqueacomp" target="_blank"> Twitter</a>
                 </div>
                 <!-- Copyright -->
             </footer>
